--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 SQLAlchemy~=1.3.13
 apispec==3.3
-marshmallow~=3.15.0
-alembic~=1.4.0
+marshmallow~=3.17.0
+alembic~=1.8.1
 attrs==21.4.0
 six==1.16.0
 Flask~=2.0.2
 fields~=5.0.0
+PyJWT~=2.4.0
+Werkzeug~=2.1.2
+python-dotenv~=0.20.0
